Correcciones Ej05 y Ej06

--- a/Ejercicio6/Ejercicio6.csproj
+++ b/Ejercicio6/Ejercicio6.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BD23772C-ED19-4B9A-ABB6-8CD417998B93}</ProjectGuid>
+    <ProjectGuid>{BE121FB1-C2C9-4B0E-B31E-64C0BB686F85}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Ejercicio6</RootNamespace>
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Fechas.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
